--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@samrum/vite-plugin-web-extension": "^5.1.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/chrome": "^0.0.323",
     "svelte": "^5.28.1",
