--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,7 @@
   "version": "0.1",
   "description": "Save references to your Reference Radar account.",
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    }
+    "default_popup": "popup.html"
   },
   "permissions": ["tabs", "storage", "activeTab"],
   "host_permissions": ["<all_urls>"],
