--- a/manifest.json
+++ b/manifest.json
@@ -12,16 +12,20 @@
     }
   },
   "permissions": ["tabs", "storage", "activeTab"],
-  "host_permissions": ["<all_urls>"],
+  "host_permissions": ["https://reference-radar.vercel.app/*"],
   "background": {
     "service_worker": "src/background.ts",
     "type": "module"
   },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["src/content.ts"],
-      "run_at": "document_idle"
+      "matches": ["https://reference-radar.vercel.app/*"],
+      "js": ["src/content.js"]
     }
   ]
 }
